<resources>
    <string name="app_name">Authentication App</string>
    <string name="started_title">Hello you</string>
    <string name="started_sub_title">
        Nice to meet you, come join our community!
        <br><b>Login</b> if you already have an account.</br>
        <br><b>Register</b> to get started with the app.</br>
    </string>
    <string name="illustration_img">Illustration Image</string>
    <string name="btn_register">Register</string>
    <string name="btn_login">Login</string>
    <string name="Login_title">Login to app</string>
    <string name="login_sub_title"><font color="#00C9B8">
<b>Login</b></font> if you already have an account.

    </string>
    <string name="login_email">Your email or username</string>
    <string name="your_password">Your Password</string>
    <string name="login_forgot_pw">Forgot Password</string>

    <string name="login_havent_account">
        I don\'t have an account <font color="#00C9B8"><b>Register</b></font>
    </string>
    <string name="create_an_account">Create an Account</string>
    <string name="register_sub_title">
<font color="#00C9B8"><b>Register</b></font> to get started with the app

    </string>
    <string name="your_fullname">Your fullname</string>
    <string name="your_email">Your email</string>
    <string name="your_username">Your Username</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="register_have_account">
        I already have an account <font color="#00C9B8"><b>Login</b></font>
    </string>
    <string name="home_title">Hello world</string>
    <string name="home_sub_title">welcome to homepage</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="reset_pw_title">Reset your Password</string>
    <string name="reset_pw_sub_title">
        <font color="00C9B8">Reset Password</font>
        if you forgot tour password
    </string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="back_to_login">
        Back to <font color="#00C9B8"><b>Login</b></font>
    </string>

</resources>